Update de la classe user avec un changement total de celui ci Update de la vue login Ajout de la classe test de Pagination à finaliser

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,10 @@ body {
 .titleCom {
     padding-left: 20px;
 }
+
+.errorTest {
+    margin-bottom: 15px;
+}
 /** Fin de la partie test color**/
 
 
