Modification de couleur test dans le css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 /** Partie test color **/
 
 .bleu {
-    background-color: #5bc0de;
+    background-color: aquamarine;
 }
 
 .rose {
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: #8a6d3b;
+    background-color: lightskyblue;
 }
 
 .rouge {
